--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,14 @@ dependencies = [
     "fastapi-utils>=0.8.0",
     "typing-inspect>=0.9.0",
     "sqladmin==0.20.1",
-    "itsdangerous==2.2.0"
+    "itsdangerous==2.2.0",
+    "uno>=0.3.3",
 ]
 
 # https://docs.astral.sh/uv/concepts/dependencies/#development-dependencies
 [dependency-groups]
 dev = [
     "grpcio-tools==1.66.*",
-    "pytest==8.3.*",
     "pynvim",
 ]
 
