--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sqladmin==0.20.1",
     "itsdangerous==2.2.0",
     "uno>=0.3.3",
+    "pypdf>=5.4.0",
 ]
 
 # https://docs.astral.sh/uv/concepts/dependencies/#development-dependencies
